# profile.ivi.ico-uxf-weston-plugin

./: .gitignore  COPYING  Makefile.am  configure.ac  groups  project.config  weston_ivi_plugin.ini
packaging/: ico-uxf-weston-plugin.changes  ico-uxf-weston-plugin.spec
protocol/: ico_input_mgr.xml  ico_ivi_shell.xml  ico_window_mgr.xml  xxx.xml
settings/: ico-pseudo-input-device.service  ico_weston.csh  ico_weston.sh  weston.ini  weston.service
src/: Makefile  Makefile.am  compositor.h  config-parser.c  config-parser.h  ico_exposay.c  ico_input-panel.c  ico_input_mgr.c  ico_input_mgr.h  ico_ivi_common.c  ico_ivi_common.h  ico_ivi_common_private.h  ico_ivi_shell.c  ico_ivi_shell.h  ico_ivi_shell_private.h  ico_plugin_loader.c  ico_plugin_version.h  ico_window_animation.c  ico_window_mgr.c  ico_window_mgr.h  ico_window_mgr_private.h  ico_window_mgr_speed_test.c  matrix.h
src/.deps/: ico_input_mgr-protocol.Plo  ico_input_mgr_la-ico_input_mgr-protocol.Plo  ico_input_mgr_la-ico_input_mgr.Plo  ico_ivi_common_la-config-parser.Plo  ico_ivi_common_la-ico_ivi_common.Plo  ico_ivi_shell-protocol.Plo  ico_ivi_shell_la-config-parser.Plo  ico_ivi_shell_la-ico_ivi_shell-protocol.Plo  ico_ivi_shell_la-ico_ivi_shell.Plo  ico_plugin_loader_la-config-parser.Plo  ico_plugin_loader_la-ico_plugin_loader.Plo  ico_window_mgr-protocol.Plo  ico_window_mgr_la-ico_window_mgr-protocol.Plo  ico_window_mgr_la-ico_window_mgr.Plo
tests/: Makefile.am  test-client.c  test-common.c  test-common.h  test-eflapp.c  test-homescreen.c  test-send_event.c  test-thumbnail.c  weston-homescreen-only  weston-only  weston-plugin-test  weston-plugin-test.anima  weston-plugin-test.homescreen  weston-plugin-test.input  weston-plugin-test.map  weston-plugin-test.notouch  weston-plugin-test.region  weston-plugin-test.resize  weston-plugin-test.resize_flower  weston-plugin-test.resize_native  weston-plugin-test.resize_smoke  weston-plugin-test.resize_smoke2  weston-plugin-test.send_input  weston-plugin-test.slide  weston-plugin-test.vanima  weston-plugin-test.vbox  weston-plugin-test.vmap  weston-plugin-test_gdb  weston-plugin-vbox  weston.ini  weston.ini.fullhd  weston_ivi_plugin.ini
tests/testdata/: hs_animatest.dat.ORG
tools/: Makefile.am  ico_pseudo_input_device.c  ico_send_inputevent.c
